[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tci-toolkit"
version = "1.0.0"
description = "Thermodynamic Cognition Index (TCI) — surplus metric for persistent ML agents"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nile Green", email = "nile@bapxai.com" }
]
keywords = [
    "machine-learning",
    "persistent-agents",
    "thermodynamics",
    "surplus-dynamics",
    "TCI",
    "PSSU",
    "LLM",
    "reinforcement-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
hf = ["transformers>=4.30.0", "torch>=2.0.0"]
openai = ["openai>=1.0.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0"]

[project.urls]
Homepage = "https://bapxai.com"
Paper = "https://zenodo.org/records/19263435"
Repository = "https://github.com/hustle-rent-due/tci-toolkit"
"Bug Tracker" = "https://github.com/hustle-rent-due/tci-toolkit/issues"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
